site/apps/main/static/css/main.css
body {
    background-color: #fff;
}

.content-container > div {
    min-height: 100%;
}

.loading-medium.behind {
    opacity: 0.65;
    filter: alpha(opacity=65);
}

.loading-medium-after-h1 {
    background-image: url('../img/icon-loading-medium.gif');
    background-position: 50% 50%;
    background-repeat: no-repeat;
    width: 25px;
    height: 60px;
    padding-left: 15px;
    float: left;
}

.loading-30 {
    width: 30px !important;
    height: 30px !important;
    min-width: 30px !important;
    min-height: 30px !important;
}

.nav-tabs > li {
}

.nav-tabs > li:hover, .nav-tabs > li a:hover {
    background-color: #fff;

}

.nav-tabs > li a:hover, .nav-tabs > li.active {
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;

}

.nav-tabs > li.active a {
    border-color: #fff;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
    background-color: #fff;
}

h1, h2 {
    font-weight: normal;
}

h4 {
    padding-top: 5px;
}

.content-container {
    padding-bottom: 50px;
    padding: 0;
}

.content-container-inner {
    padding-bottom: 50px;
    min-height: 100%;
    height: 100%;
}

.navbar-inner {
    border: none;
}

.footer .brand {
    background-image: url('../img/logo-gray.png');
    background-repeat: no-repeat;
    background-position: 50% 60%;
    width: 120px;
    height: 30px;
}

.footer {
    position: fixed;
    padding-top: 10px;
    margin-left: 175px;
    background-color: #ededed;
    height: 60px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -ms-box-sizing: border-box;
    width: 100%;
    bottom: 0;
    z-index: 1000;
}

.footer .nav {
    padding-top: 8px;
    font-size: 12px;
    margin-left: 28px;
    margin-right: 175px;
}

.footer .nav li {
    float: left;
}

.footer a {
    color: #999;
    background-color: transparent !important;
    padding-right: 20px;
    text-decoration: none;
}

.footer.leftpanel-small .nav {
    margin-right: 55px;
}

.settings {
    padding: 20px;
}

.breadcrumb {
    padding: 0;
    background-color: transparent !important;
    margin-top: 20px;
    margin-bottom: 10px !important;
}

.breadcrumb > li {
    color: #a9a9a9;
    font-weight: 300;
    text-shadow: none;
}

.breadcrumb li a {
    color: #ff6600;
    text-shadow: none;
}

.popover-content {
    border-top: none;
    background-image: url('../img/stripes-colorful.gif');
    background-position: 0px 0px;
    background-repeat: repeat-x;
    background-size: 100% 2px;
}

.top-line-colorful {
    border-top: none;
    background-image: url('../img/stripes-colorful.gif');
    background-position: 0px 0px;
    background-repeat: repeat-x;
    background-size: 100% 2px;
}

#image-version {
}

.circle {
    border-radius: 50%;
}

.circle.large {
    width: 150px;
    height: 85px;
    padding: 0px;
    padding-top: 65px;
}

.guest-container {
    background-color: #375675 !important;
    background-image: url('../img/top-shade.png');
    background-position: 50% 50%;
    background-repeat: no-repeat;
}

.signin-container {
    position: absolute;
    top: 50%;
    width: 450px;
    left: 50%;
    margin-left: -225px;
    margin-top: -250px;
}

.signin-container .alert {
    background: -webkit-linear-gradient(top, #fff 0, #ddd 100%);
    background-image: -webkit-linear-gradient(top, rgb(255, 255, 255) 0px, rgb(221, 221, 221) 100%);
    background-repeat-x: initial;
    background-repeat-y: initial;
    background-attachment: initial;
    background-position-x: initial;
    background-position-y: initial;
    background-origin: initial;
    background-clip: initial;
    background-color: initial;
    background: -moz-linear-gradient(top, #fff 0, #ddd 100%);
    background: -ms-linear-gradient(top, #fff 0, #ddd 100%);
    background: -o-linear-gradient(top, #fff 0, #ddd 100%);
    background: linear-gradient(top, #fff 0, #ddd 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd', GradientType=0);
    border: solid 1px #ddd;
    border-bottom: solid 1px #ccc;
    -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, .1);
    -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, .1);
    box-shadow: 0 1px 0 rgba(0, 0, 0, .1);
}

.signin-container .alert h4 {
    font-weight: normal;
    font-size: 18px;
    color: #444;
    text-shadow: 1px 1px 1px #fff;
}

.signin-container .alert a, .signin-container .alert label {
    color: #444;
    text-shadow: 1px 1px 1px #fff;
}

label.control-label,
.rickshaw_legend .line,
.rickshaw_legend label,
.rickshaw_legend .label {
    cursor: text !important;
}

.label {
    text-align: center;
    display: block;
    font-weight: normal;
    /*padding:2px 5px 2px 5px;*/
    padding: 5px;
    font-size: 11px;
    width: auto;
    /*text-shadow:1px 1px 1px rgba(0,0,0,0.2);*/
    margin-top: 1px;
}

.arrow-to {
    min-height: 100px;
    min-width: 300px;
}

.arrow-to:after {
    content: ">";
    font-size: 60px;
    font-weight: bold;
    position: relative;
    top: -60px;
    left: 90%;
    opacity: 0.15;
    filter: alpha(opacity=15);
    text-shadow: 1px 1px 1px #fff;

}

.signin-container .form-actions {
    margin-left: -15px;
    margin-right: -35px;
    margin-bottom: -25px;
    background-color: transparent;
}

.add-machine {
    margin-top: -1px;
    font-size: 12px !important;
}

.navbar-static-bottom a {
    color: #999;
    background-color: transparent !important;
}

.navbar-static-bottom .span3:hover, .navbar-static-bottom .span3:hover a {
    color: #777;
    background-color: transparent !important;
}

.navbar-static-bottom .nav:hover a:hover {
    color: #111;
    background-color: transparent !important;
}

.border {
    border: 1px solid red !important;
}

.text-regular {
    font-weight: normal;
}

.row-fluid.text-small {

}

.row-border {
    border-bottom: 2px solid #ddd;
}

.none {
    display: none;
}

h5 small {
    font-size: 11px;
}

.text-small {
    font-size: 11px;
}
/* ... */

